--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ main {
 /* Слайдер */
 
 .slider {
-    background-image: url(images/slider.png);
+    background-image: url(../images/slider.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
